--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,7 @@ section h2 {
     background-image: url(../img/header_img.png);
     margin-left: -68px;
     position: absolute;
-    top: 19px;
+    top: 18px;
     width: 50px;
 }
 .s_black h2::after {
@@ -264,7 +264,7 @@ section h2 {
     background-position: -50px 0;
     margin-left: 20px;
     position: absolute;
-    top: 20px;
+    top: 18px;
     width: 50px;
 }
 .mc_item {
@@ -275,6 +275,7 @@ section h2 {
 .mc_wrap {
 	text-align: center;
 	padding: 0;
+	position: relative;
 }
 .mc_item_wrap {
 	margin-left: 30px;
@@ -296,7 +297,7 @@ section h2 {
 	margin: 15px auto 0px;
 }
 .mc_item_wrap:nth-child(1) span {
-	background-position: 9px 0;
+	background-position: 2px 0;
 }
 .mc_item_wrap:nth-child(2) span {
 	background-position: -161px 0;
@@ -305,13 +306,13 @@ section h2 {
 	background-position: -323px 0;
 }
 .mc_item_wrap:nth-child(4) span {
-	background-position: -495px 0;
+	background-position: -488px 0;
 }
 .mc_item_wrap:nth-child(5) span {
 	background-position: -665px 0;
 }
 .mc_item_wrap:nth-child(6) span {
-	background-position: -830px 0;
+	background-position: -835px 0;
 }
 .mc_item h4 {
 	font-family: "BebasBold";
@@ -341,4 +342,31 @@ section h2 {
 .mc_item_wrap:hover .mc_toggle {
 	background-color: #353535;
 	background-position: -118px 10px;
+}
+body .mc_wrap .mc_item_wrap > ul {
+	background-color: #353535;
+	font-size: 20px;
+	margin-top: 25px;
+	position: absolute;
+	width: 100%;
+	padding: 15px 0;
+	list-style-image: none;
+	z-index: 10;
+	display: none;
+}
+.mc_item_wrap.active > ul li {
+	font-family: "BebasRegular";
+	display: inline-block;
+}
+.mc_item_wrap.active > ul {
+	margin: 0;
+	padding: 0;
+	list-style-position: none;
+}
+.mc_item_wrap.active > ul li a {
+	padding: 0 10px;
+	text-decoration: underline;
+}
+.mc_item_wrap.active > ul li a:hover {
+	text-decoration: none;
 }
